--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/vendor/vendors.min.css">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;500;600;700;800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -14,6 +16,7 @@
 	@@include('../components/top.html')
 	@@include('../components/info.html')
 	@@include('../components/order.html')
+	@@include('../components/block.html')
 	@@include('../components/why.html')
 	</main>
 	<script src="js/vendors/vendors.min.js"></script>
