--- a/src/components/info.html
+++ b/src/components/info.html
@@ -19,27 +19,27 @@
 		<div class="row d-flex gap-5 justify-content-between mt-3">
 			<div class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark rounded bg-primary p-2">
 				<img src="img/emoji-sunglasses.svg" class="info__item-img img-fluid w-25 h-25" alt="HAPPY CUSTOMERS">
-				<p class="info__item-text text-center fw-bolder">привлечение «тёплых» клиентов,
+				<p class="info__item-text text-center fs-5 fw-bolder">привлечение «тёплых» клиентов,
 					нуждающихся в вашем продукте</p>
 			</div>
 			<div class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark rounded bg-primary p-2">
 				<img src="img/gear.svg" class="info__item-img img-fluid  w-25 h-25" alt="OPTIMIZATION">
-				<p class="info__item-text text-center fw-bolder">оптимизацию интерфейса сайта (он
+				<p class="info__item-text text-center fs-5 fw-bolder">оптимизацию интерфейса сайта (он
 					станет более удобным)</p>
 			</div>
 			<div class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark rounded bg-primary p-2">
 				<img src="img/graph-up.svg" class="info__item-img img-fluid  w-25 h-25" alt="NEW MARKET">
-				<p class="info__item-text text-center fw-bolder">нахождение новых рынков сбыта
+				<p class="info__item-text text-center fs-5 fw-bolder">нахождение новых рынков сбыта
 					ваших товаров/услуг</p>
 			</div>
 			<div class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark rounded bg-primary p-2">
 				<img src="img/person-plus.svg" class="info__item-img img-fluid  w-25 h-25" alt="CUSTOMERS PLUS">
-				<p class="info__item-text text-center fw-bolder">появление дополнительных клиентов,
+				<p class="info__item-text text-center fs-5 fw-bolder">появление дополнительных клиентов,
 					а значит – рост продаж</p>
 			</div>
 			<div class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark rounded bg-primary p-2">
 				<img src="img/stopwatch.svg" class="info__item-img img-fluid  w-25 h-25" alt="LONG TIME">
-				<p class="info__item-text text-center fw-bolder">отличие от контекстной рекламы,
+				<p class="info__item-text text-center fs-5 fw-bolder">отличие от контекстной рекламы,
 					эффект от SEO – длительный</p>
 			</div>
 		</div>
