--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,7 +7,7 @@ html {
 	overflow-x: hidden !important;
 }
 body {
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	position: relative;
 	overflow-x: hidden !important;
 }
@@ -22,3 +22,4 @@ body, .modal, .modal-open, .header {
 @import "_top.scss";
 @import "_info.scss";
 @import "_order.scss";
+@import "_block.scss";
