--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -23,3 +23,5 @@ body, .modal, .modal-open, .header {
 @import "_info.scss";
 @import "_order.scss";
 @import "_block.scss";
+@import "_letter.scss";
+@import "_approach.scss";
