--- a/src/views/index.html
+++ b/src/views/index.html
@@ -17,6 +17,8 @@
 	@@include('../components/info.html')
 	@@include('../components/order.html')
 	@@include('../components/block.html')
+	@@include('../components/letter.html')
+	@@include('../components/approach.html')
 	@@include('../components/why.html')
 	</main>
 	<script src="js/vendors/vendors.min.js"></script>
