--- a/src/components/order.html
+++ b/src/components/order.html
@@ -19,9 +19,9 @@
 				</div>
 				<div class="modal-body">
 					<!--MODAL FORM-->
-					<form class="row g-3 needs-validation" id="formOrderCall" name="formOrderCall" novalidate>
+					<form class="row g-3 needs-validation" id="formOrderCall" name="formOrderCall" method="POST" novalidate>
 						<div class="col-12">
-							<label for="nameCall" class="form-label">ФИО</label>
+							<label for="nameCall" class="form-label">ФИО*:</label>
 							<input type="text" class="form-control" id="nameCall" name="nameCall" placeholder="ФИО" required>
 							<div class="valid-feedback">
 								Отлично!
@@ -31,7 +31,7 @@
 							</div>
 						</div>
 						<div class="col-12">
-							<label for="phoneCall" class="form-label">Телефон</label>
+							<label for="phoneCall" class="form-label">Телефон*:</label>
 							<input type="text" class="form-control" id="phoneCall" name="phoneCall" required>
 							<div class="valid-feedback">
 								Отлично!
@@ -42,8 +42,8 @@
 						</div>
 						<div class="col-12">
 							<div class="form-check">
-								<input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-								<label class="form-check-label" for="invalidCheck">
+								<input class="form-check-input" type="checkbox" value="true" id="personDataOrder" required>
+								<label class="form-check-label" for="personDataOrder">
 									Я согласен на обработку персональных данных
 								</label>
 								<div class="invalid-feedback">
