--- a/src/components/top.html
+++ b/src/components/top.html
@@ -22,9 +22,9 @@
 					</div>
 					<div class="modal-body">
 						<!--MODAL FORM-->
-						<form class="row g-3 needs-validation" id="formOrderService" name="formOrderService" novalidate>
+						<form class="row g-3 needs-validation" id="formOrderService" name="formOrderService" method="POST" novalidate>
 							<div class="col-12">
-								<label for="nameService" class="form-label">ФИО</label>
+								<label for="nameService" class="form-label">ФИО*:</label>
 								<input type="text" class="form-control" id="nameService" name="nameService" placeholder="ФИО" required>
 								<div class="valid-feedback">
 									Отлично!
@@ -34,7 +34,7 @@
 								</div>
 							</div>
 							<div class="col-12 col-sm-5">
-								<label for="phoneService" class="form-label">Телефон</label>
+								<label for="phoneService" class="form-label">Телефон*:</label>
 								<input type="text" class="form-control" id="phoneService" name="phoneService" required>
 								<div class="valid-feedback">
 									Отлично!
@@ -44,29 +44,29 @@
 								</div>
 							</div>
 							<div class="col-12 col-sm-7">
-								<label for="emailService" class="form-label">Электронная почта</label>
+								<label for="emailService" class="form-label">Электронная почта*:</label>
 								<input type="text" class="form-control" id="emailService" name="emailService" required>
 								<div class="valid-feedback">
 									Отлично!
 								</div>
 								<div class="invalid-feedback">
-									Пожалуйста, введите Ваш номер телефона
+									Пожалуйста, введите Вашу электронную почту
 								</div>
 							</div>
 							<div class="col-12">
-								<label for="siteService" class="form-label">Адрес вашего сайта</label>
+								<label for="siteService" class="form-label">Адрес вашего сайта*:</label>
 								<input type="text" class="form-control" id="siteService" name="siteService" required>
 								<div class="valid-feedback">
 									Отлично!
 								</div>
 								<div class="invalid-feedback">
-									Пожалуйста, введите Ваш номер телефона
+									Пожалуйста, введите адрес Вашего сайта
 								</div>
 							</div>
 							<div class="col-12">
 								<div class="form-check">
-									<input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-									<label class="form-check-label" for="invalidCheck">
+									<input class="form-check-input" type="checkbox" value="true" id="personDataService" required>
+									<label class="form-check-label" for="personDataService">
 										Я согласен на обработку персональных данных
 									</label>
 									<div class="invalid-feedback">
