--- a/src/scss/_order.scss
+++ b/src/scss/_order.scss
@@ -1,5 +1,5 @@
 .order {
-	background: url('/img/recourse.jpg') center / cover no-repeat;
+	background: url('../img/recourse.jpg') center / cover no-repeat;
 	min-height: 200px;
 
 	&__title, &__text {
