--- a/src/scss/_top.scss
+++ b/src/scss/_top.scss
@@ -1,6 +1,6 @@
 .top {
 	margin-top: 80px;
-	background: linear-gradient(to right, rgba(30, 75, 115, 1), rgba(255, 255, 255, 0)), url('/img/banner.jpg') 70% / cover no-repeat;
+	background: linear-gradient(to right, rgba(30, 75, 115, 1), rgba(255, 255, 255, 0)), url('../img/banner.jpg') 70% / cover no-repeat;
 	&__main {
 		color: #fff;
 	}
