--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,6 +17,19 @@ ul {
 body, .modal, .modal-open, .header {
 	padding-right: 0px !important;
 }
+.accordion-button:not(.collapsed) {
+	color:rgb(0, 20, 45) !important;
+	background-color: transparent;
+	border-color: transparent !important;
+	box-shadow: 0 0 0 0 rgba(0,0,0,0);
+}
+.accordion-button::after {
+	background-image: url("../img/chevron-down.svg");
+	transition: all 0.4s;
+}
+.accordion-button:not(.collapsed)::after {
+	background-image: url("../img/chevron-down.svg");
+}
 
 @import "_header.scss";
 @import "_top.scss";
@@ -25,3 +38,4 @@ body, .modal, .modal-open, .header {
 @import "_block.scss";
 @import "_letter.scss";
 @import "_approach.scss";
+@import "_procedure.scss";
