--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,6 +19,7 @@
 	@@include('../components/block.html')
 	@@include('../components/letter.html')
 	@@include('../components/approach.html')
+	@@include('../components/procedure.html')
 	@@include('../components/why.html')
 	</main>
 	<script src="js/vendors/vendors.min.js"></script>
