--- a/src/components/approach.html
+++ b/src/components/approach.html
@@ -3,7 +3,7 @@
 	<div class="container">
 		<div class="row flex-column justify-content-center align-items-center">
 			<div class="col-12 col-sm-6 d-flex flex-column justify-content-center align-items-center">
-				<h2 class="approach fs-2 fw-bolder text-center">Делаем только нужное</h2>
+				<h2 class="approach__title fs-2 fw-bolder text-center">Делаем только нужное</h2>
 				<p class="approach__subtitle fs-3 text-center text-muted">100% БЕЛЫЙ ПОДХОД</p>
 			</div>
 		</div>
