--- a/src/scss/_letter.scss
+++ b/src/scss/_letter.scss
@@ -1,5 +1,11 @@
 .letter {
 	min-height: 200px;
-	background-color: rgb(0,20,45);
+	background: linear-gradient(90deg, rgba(0,20,45,0.85) 0%, rgba(0,20,45,0.85) 100%), url("../img/seo/seo_img_1.jpg") center / cover no-repeat;
 	color: #fff;
+}
+
+@media screen and (max-width: 576px) {
+	.letter {
+		background: linear-gradient(90deg, rgba(0,20,45,0.85) 0%, rgba(0,20,45,0.85) 100%), url("../img/seo/seo_img_1-min.jpg") center / cover no-repeat;
+	}
 }
