--- a/src/components/header.html
+++ b/src/components/header.html
@@ -18,41 +18,44 @@
 						<a class="nav-link" href="#procedure">Услуги</a>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link" href="#team">Команда</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link" href="#price">Тарифы</a>
 					</li>
 				</ul>
 			</div>
 			<!-- SOCIAL BUTTONS -->
-				<ul class="header__social navbar-nav d-flex flex-row flex-grow-1 flex-sm-grow-0 justify-content-between order-1 order-sm-2 order-lg-3 ms-auto me-3 me-lg-0">
-					<li class="pe-3 header__social-item">
+				<ul class="header__social navbar-nav d-flex flex-row flex-grow-1 flex-sm-grow-0 justify-content-between order-1 order-sm-2 order-lg-4 ms-auto me-3 me-lg-0">
+					<li class="d-block d-xl-none pe-2 pe-sm-3 header__social-item">
 						<a href="mailto:info@velesdigital.ru" class="header__social-link" target="_blank">
 							<img src="img/envelope-fill.svg" alt="EMAIL" srcset="">
 						</a>
 					</li>
-					<li class="pe-3 header__social-item">
+					<li class="d-block d-xl-none pe-2 pe-sm-3 header__social-item">
 						<a href="tel:+79219616651" class="header__social-link">
 							<img src="img/telephone-fill.svg" alt="PHONE" srcset="">
 						</a>
 					</li>
-					<li class="pe-3 header__social-item fw-bold">
+					<li class="d-block d-xl-none pe-2 pe-sm-3 header__social-item fw-bold">
 						<span>|</span>
 					</li>
-					<li class="pe-3 header__social-item">
+					<li class="pe-2 pe-sm-3 header__social-item">
 						<a href="https://vk.com/veles_digital" class="header__social-link" target="_blank">
 							<img src="img/vk.svg" alt="VKONTACTE" srcset="">
 						</a>
 					</li>
-					<li class="pe-3 header__social-item">
+					<li class="pe-2 pe-sm-3 header__social-item">
 						<a href="https://www.instagram.com/veles_digital/" class="header__social-link" target="_blank">
 							<img src="img/instagram.svg" alt="INSTAGRAM" srcset="">
 						</a>
 					</li>
-					<li class="pe-3 header__social-item">
+					<li class="pe-2 pe-sm-3 header__social-item">
 						<a href="https://www.youtube.com/channel/UCyFEgZL5xCdFG8e9yQ_zIRg" class="header__social-link" target="_blank">
 							<img src="img/youtube.svg" alt="YOUTUBE" srcset="">
 						</a>
 					</li>
-					<li class="pe-3 header__social-item">
+					<li class="pe-2 pe-sm-3 header__social-item">
 						<a href="https://telegram.me/vyacheslav_it" class="header__social-link" target="_blank">
 							<img src="img/telegram.svg" alt="TELEGRAM" srcset="">
 						</a>
@@ -63,6 +66,17 @@
 						</a>
 					</li>
 				</ul>
+				<!--PHONE&EMAIL HEADER-->
+				<div class="header__contact row d-none d-xl-flex flex-column order-lg-3 me-5 fw-bolder fs-5">
+					<a href="tel:+79219616651" class="text-decoration-none">
+						+7 (921) 961-66-51
+					</a>
+					<a href="mailto:info@velesdigital.ru" class="text-decoration-none" target="_blank">
+						info@velesdigital.ru
+					</a>
+					<!-- <div class=" "></div> -->
+				</div>
+				
 		</div>
 	</nav>
 </header>
