--- a/src/components/info.html
+++ b/src/components/info.html
@@ -2,46 +2,46 @@
 	<div class="container">
 		<!--INFO MAIN-->
 		<div class="row justify-content-center">
-			<h2 class="info__title col-12 col-md-6 fs-2 fw-bolder text-center">SEO-оптимизация</h2>
+			<h2 class="info__title col-12 col-md-6 mb-4 fs-2 fw-bolder text-center">SEO-оптимизация</h2>
 		</div>
 		<div class="row justify-content-center">
-			<p class="info__text col-12 col-md-10 text-center text-break fs-5">Следующий шаг после создания веб-сайта – продвижение в
+			<p class="info__text col-12 col-md-10 text-center text-break fs-6 fs-sm-5">Следующий шаг после создания веб-сайта – продвижение в
 				поисковых системах. В России главные поисковые машины – Яндекс и Гугл, мы предлагаем SEO для обеих. Вам не нужно
 				пытаться понять все сложности поискового продвижения, - этим займёмся мы!
 			</p>
 		</div>
 		<div class="row justify-content-center">
-			<p class="info__text col-12 col-md-10 text-center text-break fs-5">Выведение сайта в «топ» поисковиков – длительный процесс,
+			<p class="info__text col-12 col-md-10 text-center text-break fs-6 fs-sm-5">Выведение сайта в «топ» поисковиков – длительный процесс,
 				который требует специальных знаний. Зато результат даст вам множество ценных преимуществ:
 			</p>
 		</div>
 		<!--INFO ITEM CARD-->
 		<div class="row d-flex gap-5 justify-content-between mt-3">
-			<div class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark rounded bg-primary p-2">
-				<img src="img/emoji-sunglasses.svg" class="info__item-img img-fluid w-25 h-25" alt="HAPPY CUSTOMERS">
-				<p class="info__item-text text-center text-break fs-5 fw-bolder">привлечение «тёплых» клиентов,
+			<article class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark bg-primary p-2">
+				<img src="img/emoji-sunglasses.svg" class="info__item-img img-fluid" alt="HAPPY CUSTOMERS">
+				<p class="info__item-text text-center text-break fs-6 fs-sm-5 fw-bolder">привлечение «тёплых» клиентов,
 					нуждающихся в вашем продукте</p>
-			</div>
-			<div class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark rounded bg-primary p-2">
-				<img src="img/gear.svg" class="info__item-img img-fluid  w-25 h-25" alt="OPTIMIZATION">
-				<p class="info__item-text text-center text-break fs-5 fw-bolder">оптимизацию интерфейса сайта (он
+			</article>
+			<article class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark bg-primary p-2">
+				<img src="img/gear.svg" class="info__item-img img-fluid" alt="OPTIMIZATION">
+				<p class="info__item-text text-center text-break fs-6 fs-sm-5 fw-bolder">оптимизацию интерфейса сайта (он
 					станет более удобным)</p>
-			</div>
-			<div class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark rounded bg-primary p-2">
-				<img src="img/graph-up.svg" class="info__item-img img-fluid  w-25 h-25" alt="NEW MARKET">
-				<p class="info__item-text text-center text-break fs-5 fw-bolder">нахождение новых рынков сбыта
+			</article>
+			<article class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark bg-primary p-2">
+				<img src="img/graph-up.svg" class="info__item-img img-fluid" alt="NEW MARKET">
+				<p class="info__item-text text-center text-break fs-6 fs-sm-5 fw-bolder">нахождение новых рынков сбыта
 					ваших товаров/услуг</p>
-			</div>
-			<div class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark rounded bg-primary p-2">
-				<img src="img/person-plus.svg" class="info__item-img img-fluid  w-25 h-25" alt="CUSTOMERS PLUS">
-				<p class="info__item-text text-center text-break fs-5 fw-bolder">появление дополнительных клиентов,
+			</article>
+			<article class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark bg-primary p-2">
+				<img src="img/person-plus.svg" class="info__item-img img-fluid" alt="CUSTOMERS PLUS">
+				<p class="info__item-text text-center text-break fs-6 fs-sm-5 fw-bolder">появление дополнительных клиентов,
 					а значит – рост продаж</p>
-			</div>
-			<div class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark rounded bg-primary p-2">
-				<img src="img/stopwatch.svg" class="info__item-img img-fluid  w-25 h-25" alt="LONG TIME">
-				<p class="info__item-text text-center text-break fs-5 fw-bolder">отличие от контекстной рекламы,
+			</article>
+			<article class="info__item d-flex flex-column justify-content-center align-items-center col-12 col-sm-4 col-md-3 border border-dark bg-primary p-2">
+				<img src="img/stopwatch.svg" class="info__item-img img-fluid" alt="LONG TIME">
+				<p class="info__item-text text-center text-break fs-6 fs-sm-5 fw-bolder">отличие от контекстной рекламы,
 					эффект от SEO – длительный</p>
-			</div>
+			</article>
 		</div>
 
 	</div>
