--- a/src/components/letter.html
+++ b/src/components/letter.html
@@ -1,5 +1,5 @@
 <section class="letter container-fluid py-5 my-5">
-	<h2 class="letter__title w-100 fs-2 fw-bold text-center">Заказать услугу</h2>
+	<h2 class="letter__title w-100 mb-4 fs-2 fw-bold text-center">Заказать услугу</h2>
 	<div class="row justify-content-center">
 		<form class="letter__form col-12 col-sm-6 g-3 needs-validation" id="formLetter" name="formLetter" method="POST" novalidate>
 			<div class="row">
