--- a/src/components/procedure.html
+++ b/src/components/procedure.html
@@ -3,7 +3,7 @@
 	<div class="procedure__info container h-100">
 		<div class="row flex-column justify-content-center align-items-center">
 			<div class="col-12 d-flex flex-column justify-content-center align-items-center">
-				<h2 class="procedure__title fs-2 fw-bolder text-center">Работы, которые мы делаем по договору</h2>
+				<h2 class="procedure__title mb-4 fs-2 fw-bolder text-center">Работы, которые мы делаем по договору</h2>
 				<p class="procedure__subtitle fs-3 text-center">В рамках SEO продвижения вашего сайта</p>
 			</div>
 		</div>
