--- a/src/components/top.html
+++ b/src/components/top.html
@@ -1,18 +1,17 @@
 <section class="top container-fluid p-5">
 	<div class="container">
+		<!--TOP TITLE-->
 		<div class="top__main row">
 			<div class="col-12 col-md-8 col-xl-6">
 				<h1 class="fs-1 fw-bold my-4">Продвижение сайта (SEO)</h1>
 				<h3 class="fs-3 fw-bold my-4">Поднимаем ваши сайты с самого дна поисковых систем от 9.900 руб/месяц</h3>
 				<h4 class="fs-4 fw-bold my-4">Число запросов для SEO продвижения не ограничено</h4>
 				<h4 class="fs-4 fw-bold my-4">Гарантии результата — в договоре</h4>
-				<button type="button" class="btn btn-warning fs-4 fw-bold my-4 py-3" data-bs-toggle="modal"
-				data-bs-target="#orderService">Заказать услугу</button>
+				<button type="button" class="btn btn-warning fs-6 fs-sm-4 fw-bold my-4 py-3" data-bs-toggle="modal"
+					data-bs-target="#orderService">Заказать услугу</button>
 			</div>
 		</div>
-
-
-		<!-- MODAL FOR ORDER -->
+		<!-- MODAL FOR ORDER SERVICE -->
 		<div class="modal fade" id="orderService" tabindex="-1" aria-labelledby="orderServiceLabel" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
@@ -22,7 +21,8 @@
 					</div>
 					<div class="modal-body">
 						<!--MODAL FORM-->
-						<form class="row g-3 needs-validation" id="formOrderService" name="formOrderService" method="POST" novalidate>
+						<form class="row g-3 needs-validation" id="formOrderService" name="formOrderService" method="POST"
+							novalidate>
 							<div class="col-12">
 								<label for="nameService" class="form-label">ФИО*:</label>
 								<input type="text" class="form-control" id="nameService" name="nameService" placeholder="ФИО" required>
@@ -75,13 +75,13 @@
 								</div>
 							</div>
 							<div class="col-12">
-								<button class="btn btn-primary" type="submit">Отправить</button>
+								<button class="btn btn-warning fw-bolder" type="submit">Отправить</button>
 							</div>
 						</form>
 						<!---->
 					</div>
 					<div class="modal-footer">
-						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+						<button type="button" class="btn btn-secondary fw-bolder" data-bs-dismiss="modal">Закрыть</button>
 					</div>
 				</div>
 			</div>
