--- a/src/components/approach.html
+++ b/src/components/approach.html
@@ -3,12 +3,11 @@
 	<div class="container">
 		<div class="row flex-column justify-content-center align-items-center">
 			<div class="col-12 col-sm-6 d-flex flex-column justify-content-center align-items-center">
-				<h2 class="approach__title fs-2 fw-bolder text-center">Делаем только нужное</h2>
-				<p class="approach__subtitle fs-3 text-center text-muted">100% БЕЛЫЙ ПОДХОД</p>
+				<h2 class="approach__title mb-4 fs-2 fw-bolder text-center">Делаем только нужное</h2>
+				<p class="approach__subtitle fs-3 text-center text-muted text-uppercase">100% белый подход</p>
 			</div>
 		</div>
 	</div>
-
 	<!--APPROACH ITEMS-->
 	<div class="container">
 		<div class="row gap-5 d-flex align-items-stretch justify-content-center">
@@ -21,12 +20,12 @@
 					</picture>
 				</figure>
 				<h3 class="approach__item-title flex-grow-1 p-3 fs-5 text-break">Продвижение сайта в top</h3>
-				<p class="approach__item-text p-3">Принципиальная позиция «Велес Диджитал» - наполнение сайта такими текстами, чтобы они нравились и
+				<p class="approach__item-text p-3">Принципиальная позиция «Велес Диджитал» - наполнение сайта такими текстами,
+					чтобы они нравились и
 					поисковым
 					системам, и людям. Ведь вкладываться в продвижение сайта есть смысл, только когда он интересен привлечённым
 					через поисковик посетителям.</p>
 			</article>
-
 			<article class="approach__item col-12 col-md-5 d-flex flex-column p-0">
 				<figure class="figure w-100">
 					<picture>
@@ -37,12 +36,12 @@
 				</figure>
 				<h3 class="approach__item-title flex-grow-1 p-3 fs-5 text-break">Продвижение сайта в яндексе и гугле недорого
 				</h3>
-				<p class="approach__item-text p-3">«Велес Диджитал» понимает, что ваш бизнес должен приносить выгоду. Цена за продвижение сайта в
+				<p class="approach__item-text p-3">«Велес Диджитал» понимает, что ваш бизнес должен приносить выгоду. Цена за
+					продвижение сайта в
 					яндексе (или
 					гугле) в топ 10 устанавливается таким образом, чтобы вы легко её отбили за счёт роста продаж через сайт. Мы
 					не берём «рекламной наценки».</p>
 			</article>
-
 			<article class="approach__item col-12 col-md-5 d-flex flex-column p-0">
 				<figure class="figure w-100">
 					<picture>
@@ -53,9 +52,10 @@
 				</figure>
 				<h3 class="approach__item-title flex-grow-1 p-3 fs-5 text-break">Создание и продвижение сайтов
 				</h3>
-				<p class="approach__item-text p-3">Сео-продвижение уже существующего сайта, о котором у поисковых машин имеется сложившееся «мнение» - только один из вариантов. Гораздо интересней и выгодней заказать комплекс услуг: создание и продвижение сайта. Мы успешно продвигаем и раскручиваем как «старые», так и «новые» сайты.</p>
+				<p class="approach__item-text p-3">Сео-продвижение уже существующего сайта, о котором у поисковых машин имеется
+					сложившееся «мнение» - только один из вариантов. Гораздо интересней и выгодней заказать комплекс услуг:
+					создание и продвижение сайта. Мы успешно продвигаем и раскручиваем как «старые», так и «новые» сайты.</p>
 			</article>
-
 			<article class="approach__item col-12 col-md-5 d-flex flex-column p-0">
 				<figure class="figure w-100">
 					<picture>
@@ -66,9 +66,11 @@
 				</figure>
 				<h3 class="approach__item-title flex-grow-1 p-3 fs-5 text-break">Ручной сбор семантического ядра
 				</h3>
-				<p class="approach__item-text p-3">Кропотливо вручную собираем запросы, по которым нужно продвигать ваш сайт. В отбор идут только те запросы, которые приведут на сайт потенциальных клиентов. Сайт будет с первых дней существования заполняться «правильными» текстами, которые постепенно выведут его в топ одной или обеих поисковых систем.</p>
+				<p class="approach__item-text p-3">Кропотливо вручную собираем запросы, по которым нужно продвигать ваш сайт. В
+					отбор идут только те запросы, которые приведут на сайт потенциальных клиентов. Сайт будет с первых дней
+					существования заполняться «правильными» текстами, которые постепенно выведут его в топ одной или обеих
+					поисковых систем.</p>
 			</article>
-
 			<article class="approach__item col-12 col-md-5 d-flex flex-column p-0">
 				<figure class="figure w-100">
 					<picture>
@@ -79,9 +81,10 @@
 				</figure>
 				<h3 class="approach__item-title flex-grow-1 p-3 fs-5 text-break">Аналитика и отчетность
 				</h3>
-				<p class="approach__item-text p-3">Ежемесячно анализируем позиции в поисковых системах, а также трафик и поведение пользователей на вашем сайте. Предоставляем отчёты о проделанной работе, формируем дальнейшие рекомендации.</p>
+				<p class="approach__item-text p-3">Ежемесячно анализируем позиции в поисковых системах, а также трафик и
+					поведение пользователей на вашем сайте. Предоставляем отчёты о проделанной работе, формируем дальнейшие
+					рекомендации.</p>
 			</article>
-
 			<article class="approach__item col-12 col-md-5 d-flex flex-column p-0">
 				<figure class="figure w-100">
 					<picture>
@@ -92,9 +95,10 @@
 				</figure>
 				<h3 class="approach__item-title flex-grow-1 p-3 fs-5 text-break">Глубокая оптимизация сайта
 				</h3>
-				<p class="approach__item-text p-3">Проводим технический аудит, выявляем уязвимые места сайта, находим ошибки, проблемы. Составляем план работ на несколько месяцев. Осуществляем переработку сайта. Проводим его техническую оптимизацию, изменяем содержимое сайта. При необходимости меняем структуру разделов/подразделов.</p>
+				<p class="approach__item-text p-3">Проводим технический аудит, выявляем уязвимые места сайта, находим ошибки,
+					проблемы. Составляем план работ на несколько месяцев. Осуществляем переработку сайта. Проводим его техническую
+					оптимизацию, изменяем содержимое сайта. При необходимости меняем структуру разделов/подразделов.</p>
 			</article>
 		</div>
 	</div>
-
 </section>
