--- a/src/components/faq.html
+++ b/src/components/faq.html
@@ -3,7 +3,7 @@
 <div class="review__head container my-5">
 	<div class="row flex-column justify-content-center align-items-center">
 		<div class="col-12 d-flex flex-column justify-content-center align-items-center">
-			<h2 class="review__title fs-2 fw-bolder text-center">Часто задаваемые вопросы</h2>
+			<h2 class="review__title mb-4 fs-2 fw-bolder text-center">Часто задаваемые вопросы</h2>
 		</div>
 	</div>
 </div>
