--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer container-fluid py-5">
+<footer id="footer" class="footer container-fluid pt-5 pb-2">
 	<div class="container">
 		<div class="row justify-content-between align-items-end">
 			<!-- LOGO -->
@@ -8,20 +8,20 @@
 				</a>
 				<ul class="footer__contact navbar-nav d-flex flex-column">
 					<li class="footer__contact-item mb-2">
-						<a href="mailto:info@velesdigital.ru" class="footer__contact-link w-100 d-flex  align-items-center"
+						<a href="mailto:info@velesdigital.ru" class="footer__contact-link d-flex align-items-center"
 							target="_blank">
 							<img src="img/envelope-fill.svg" alt="EMAIL">
 							<span class="ps-2 fw-bolder">info@velesdigital.ru</span>
 						</a>
 					</li>
 					<li class="footer__contact-item  mb-2">
-						<a href="tel:+79219616651" class="footer__contact-link  w-100 d-flex  align-items-center">
+						<a href="tel:+79219616651" class="footer__contact-link d-flex align-items-center">
 							<img src="img/telephone-fill.svg" alt="PHONE">
 							<span class="ps-2 fw-bolder">+7 (921) 961-66-51</span>
 						</a>
 					</li>
 					<li class="footer__contact-item ">
-						<a href="https://yandex.ru/maps/-/CCUQnOwf0A" class="footer__contact-link  w-100 d-flex  align-items-center">
+						<a href="https://yandex.ru/maps/-/CCUQnOwf0A" target="_blank" class="footer__contact-link d-flex align-items-center">
 							<img src="img/building.svg" alt="OFICCE">
 							<span class="ps-2 fw-bolder">г. Кемерово, пр-кт Кузнецкий 115А</span>
 						</a>
@@ -60,7 +60,9 @@
 					</li>
 				</ul>
 			</div>
-
+		</div>
+		<div class="row mt-4">
+			<p class="copyrights">&copy; 2021 «Велес Диджитал: Готовые цифровые решения. Ваш надежный IT партнер»</p>
 		</div>
 	</div>
 </footer>
