--- a/src/components/order.html
+++ b/src/components/order.html
@@ -1,9 +1,9 @@
 <section id="order" class="order conatiner-fluid py-5 mb-5">
-	<!--ORDER INFO-->
+	<!--ORDER CALL INFO-->
 	<div class="row flex-column justify-content-center align-items-center">
-		<div class="col-12 col-sm-6 d-flex flex-column justify-content-center align-items-center">
-			<h2 class="order__title fs-2 text-center">Заказать звонок</h2>
-			<p class="order__text fs-3 text-center">Получите индивидуальное коммерческое предложение для вашего сайта</p>
+		<div class="col-12 col-sm-10 col-md-6 d-flex flex-column justify-content-center align-items-center">
+			<h2 class="order__title mb-4 fs-2 fw-bolder text-center">Заказать звонок</h2>
+			<p class="order__text mb-4 fs-3 text-center">Получите индивидуальное коммерческое предложение для вашего сайта</p>
 			<button type="button" class="btn btn-warning fs-4 fw-bold py-3" data-bs-toggle="modal"
 				data-bs-target="#orderCall">Позвоните мне</button>
 		</div>
@@ -52,13 +52,13 @@
 							</div>
 						</div>
 						<div class="col-12">
-							<button class="btn btn-primary" type="submit">Отправить</button>
+							<button class="btn btn-warning fw-bolder" type="submit">Отправить</button>
 						</div>
 					</form>
 					<!---->
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+					<button type="button" class="btn btn-secondary fw-bolder" data-bs-dismiss="modal">Закрыть</button>
 				</div>
 			</div>
 		</div>
