--- a/src/components/price.html
+++ b/src/components/price.html
@@ -3,7 +3,7 @@
 	<div class="price__head container h-100 mb-4">
 		<div class="row flex-column justify-content-center align-items-center">
 			<div class="col-12 d-flex flex-column justify-content-center align-items-center">
-				<h2 class="price__title fs-2 fw-bolder text-center">Тарифы</h2>
+				<h2 class="price__title mb-4 fs-2 fw-bolder text-center">Тарифы</h2>
 				<p class="price__subtitle fs-3 text-center">Выберите оптимальный пакет услуг</p>
 			</div>
 		</div>
