--- a/src/components/team.html
+++ b/src/components/team.html
@@ -1,14 +1,13 @@
-<section class="team container-fluid my-5 py-5">
+<section id="team" class="team container-fluid my-5 py-5">
 	<!--TEAM TITLE-->
 	<div class="team__head container h-100 mb-4">
 		<div class="row flex-column justify-content-center align-items-center">
 			<div class="col-12 d-flex flex-column justify-content-center align-items-center">
-				<h2 class="team__title fs-2 fw-bolder text-center">Наша команда</h2>
+				<h2 class="team__title mb-4 fs-2 fw-bolder text-center">Наша команда</h2>
 				<p class="team__subtitle fs-3 text-center">Кто именно работает над вашим проектом</p>
 			</div>
 		</div>
 	</div>
-
 	<!--TEAM INFO-->
 	<div class="team__info container">
 		<div class="row justify-content-between">
