--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -8,13 +8,22 @@
 	}
 	&__social-link {
 		display: block;
-		width: 20px;
-		height: 20px;
+		width: 25px;
+		height: 25px;
 	}
 	&__logo-img img, &__social-link img {
 		width: 100%;
 		height: 100%;
 		object-position: center;
 		object-fit: fill;
+	}
+	.nav-link {
+		color: rgb(0, 20, 45) !important;
+		&:hover {
+			color: rgba(0, 20, 45, 0.75) !important;
+		}
+	}
+	&__contact a {
+		color: rgb(0, 20, 45) !important;
 	}
 }
