--- a/src/scss/_info.scss
+++ b/src/scss/_info.scss
@@ -1,9 +1,12 @@
 .info {
 	&__item {
 		min-height: 150px;
+		img {
+			width: 65px;
+			height: 65px;
+		}
 	}
 	&__item-text {
-		color: rgb(19, 18, 18);
 		&:first-letter {
 			font-size: 150%;
 		}
