--- a/src/components/letter.html
+++ b/src/components/letter.html
@@ -1,7 +1,7 @@
 <section class="letter container-fluid py-5 my-5">
 	<h2 class="letter__title w-100 mb-4 fs-2 fw-bold text-center">Заказать услугу</h2>
 	<div class="row justify-content-center">
-		<form class="letter__form col-12 col-sm-6 g-3 needs-validation" id="formLetter" name="formLetter" method="POST" novalidate>
+		<form class="letter__form col-12 col-sm-6 g-3 needs-validation" id="formLetter" name="formLetter" method="POST" action="php/orderLetter.php" novalidate>
 			<div class="row">
 			<div class="col-12 mb-3">
 				<label for="nameLetter" class="form-label">ФИО*:</label>
@@ -60,7 +60,7 @@
 				</div>
 			</div>
 			<div class="col-12 mb-3">
-				<button class="btn btn-warning fs-5 fw-bolder" type="submit">Отправить</button>
+				<button class="btn btn-warning fs-5 fw-bolder" type="submit" disabled>Отправить</button>
 			</div>
 		</div>
 		</form>
