--- a/src/components/top.html
+++ b/src/components/top.html
@@ -21,7 +21,7 @@
 					</div>
 					<div class="modal-body">
 						<!--MODAL FORM-->
-						<form class="row g-3 needs-validation" id="formOrderService" name="formOrderService" method="POST"
+						<form class="row g-3 needs-validation" id="formOrderService" name="formOrderService" method="POST" action="php/orderService.php"
 							novalidate>
 							<div class="col-12">
 								<label for="nameService" class="form-label">ФИО*:</label>
@@ -75,7 +75,7 @@
 								</div>
 							</div>
 							<div class="col-12">
-								<button class="btn btn-warning fw-bolder" type="submit">Отправить</button>
+								<button class="btn btn-warning fw-bolder" type="submit" disabled>Отправить</button>
 							</div>
 						</form>
 						<!---->
