--- a/src/components/order.html
+++ b/src/components/order.html
@@ -19,7 +19,7 @@
 				</div>
 				<div class="modal-body">
 					<!--MODAL FORM-->
-					<form class="row g-3 needs-validation" id="formOrderCall" name="formOrderCall" method="POST" novalidate>
+					<form class="row g-3 needs-validation" id="formOrderCall" name="formOrderCall" method="POST" action="php/orderCall.php" novalidate>
 						<div class="col-12">
 							<label for="nameCall" class="form-label">ФИО*:</label>
 							<input type="text" class="form-control" id="nameCall" name="nameCall" placeholder="ФИО" required>
@@ -42,7 +42,7 @@
 						</div>
 						<div class="col-12">
 							<div class="form-check">
-								<input class="form-check-input" type="checkbox" value="true" id="personDataOrder" required>
+								<input class="form-check-input" type="checkbox" value="true" id="personDataCall" required>
 								<label class="form-check-label" for="personDataOrder">
 									Я согласен на обработку персональных данных
 								</label>
@@ -52,7 +52,7 @@
 							</div>
 						</div>
 						<div class="col-12">
-							<button class="btn btn-warning fw-bolder" type="submit">Отправить</button>
+							<button class="btn btn-warning fw-bolder" type="submit" disabled>Отправить</button>
 						</div>
 					</form>
 					<!---->
