--- a/src/scss/_info.scss
+++ b/src/scss/_info.scss
@@ -1,10 +1,18 @@
 .info {
+	position: relative;
 	&__item {
 		min-height: 150px;
 		img {
-			width: 65px;
-			height: 65px;
+			width: 100%;
+			height: 100%;
+			object-fit: contain;
+			object-position: center;
 		}
+		&:hover {
+			box-shadow: 0px 2.5px 10px 2.5px rgba(0,0,0,0.5);
+			z-index: 10;
+		}
+
 	}
 	&__item-text {
 		&:first-letter {
