12/04/21__15:20_MSK_add video frame

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,6 +27,7 @@ body, .modal, .modal-open, .header {
 @import "_header.scss";
 @import "_top.scss";
 @import "_info.scss";
+@import "_video.scss";
 @import "_order.scss";
 @import "_block.scss";
 @import "_letter.scss";
