--- a/src/views/index.html
+++ b/src/views/index.html
@@ -16,6 +16,7 @@
 	<main>
 	@@include('../components/top.html')
 	@@include('../components/info.html')
+	@@include('../components/video.html')
 	@@include('../components/order.html')
 	@@include('../components/block.html')
 	@@include('../components/letter.html')
