14/04/21_19:30 MSK add new style, components, img

--- a/src/components/approach.html
+++ b/src/components/approach.html
@@ -11,7 +11,7 @@
 	<!--APPROACH ITEMS-->
 	<div class="container">
 		<div class="row gap-5 d-flex align-items-stretch justify-content-center">
-			<article class="approach__item col-12 col-md-5 d-flex flex-column p-0">
+			<article class="approach__item col-12 col-md-5 d-flex flex-column p-0 border border-1">
 				<figure class="figure w-100">
 					<picture>
 						<source media="(max-width: 576px)" srcset="img/seo/leads-min.png">
@@ -26,7 +26,7 @@
 					системам, и людям. Ведь вкладываться в продвижение сайта есть смысл, только когда он интересен привлечённым
 					через поисковик посетителям.</p>
 			</article>
-			<article class="approach__item col-12 col-md-5 d-flex flex-column p-0">
+			<article class="approach__item col-12 col-md-5 d-flex flex-column p-0 border border-1">
 				<figure class="figure w-100">
 					<picture>
 						<source media="(max-width: 576px)" srcset="img/seo/online-marketing-min.png">
@@ -42,7 +42,7 @@
 					гугле) в топ 10 устанавливается таким образом, чтобы вы легко её отбили за счёт роста продаж через сайт. Мы
 					не берём «рекламной наценки».</p>
 			</article>
-			<article class="approach__item col-12 col-md-5 d-flex flex-column p-0">
+			<article class="approach__item col-12 col-md-5 d-flex flex-column p-0 border border-1">
 				<figure class="figure w-100">
 					<picture>
 						<source media="(max-width: 576px)" srcset="img/seo/screen-min.png">
@@ -56,7 +56,7 @@
 					сложившееся «мнение» - только один из вариантов. Гораздо интересней и выгодней заказать комплекс услуг:
 					создание и продвижение сайта. Мы успешно продвигаем и раскручиваем как «старые», так и «новые» сайты.</p>
 			</article>
-			<article class="approach__item col-12 col-md-5 d-flex flex-column p-0">
+			<article class="approach__item col-12 col-md-5 d-flex flex-column p-0 border border-1">
 				<figure class="figure w-100">
 					<picture>
 						<source media="(max-width: 576px)" srcset="img/seo/seo-keyword-min.png">
@@ -71,7 +71,7 @@
 					существования заполняться «правильными» текстами, которые постепенно выведут его в топ одной или обеих
 					поисковых систем.</p>
 			</article>
-			<article class="approach__item col-12 col-md-5 d-flex flex-column p-0">
+			<article class="approach__item col-12 col-md-5 d-flex flex-column p-0 border border-1">
 				<figure class="figure w-100">
 					<picture>
 						<source media="(max-width: 576px)" srcset="img/seo/seo-analytics-min.png">
@@ -85,7 +85,7 @@
 					поведение пользователей на вашем сайте. Предоставляем отчёты о проделанной работе, формируем дальнейшие
 					рекомендации.</p>
 			</article>
-			<article class="approach__item col-12 col-md-5 d-flex flex-column p-0">
+			<article class="approach__item col-12 col-md-5 d-flex flex-column p-0 border border-1">
 				<figure class="figure w-100">
 					<picture>
 						<source media="(max-width: 576px)" srcset="img/seo/app-design-min.png">
