--- a/src/components/block.html
+++ b/src/components/block.html
@@ -1,8 +1,8 @@
 <section class="block container py-5">
 	<!--BLOCK ABOUT TITLE-->
 	<div class="row d-flex justify-content-center justify-content-lg-between gap-3 mt-3">
-		<article class="col-10 col-md-8 col-lg-3 block__card d-flex flex-column align-items-center">
-			<img src="img/arrow-clockwise.svg" class="block__img my-4" alt="CHANGE">
+		<article class="col-10 col-md-8 col-lg-3 block__card d-flex flex-column align-items-center border border-1">
+			<img src="img/block_1.png" class="block__img my-4" alt="CHANGE">
 			<h3 class="fw-bold mb-2 mb-sm-4 ms-2 fs-5 text-center text-sm-start">Ваш сайт никто не посещает и заявок — по
 				нулям?</h3>
 			<ul class="block__list mb-5 me-2">
@@ -14,8 +14,8 @@
 					чтобы быть максимально эффективными</li>
 			</ul>
 		</article>
-		<article class="col-10 col-md-8 col-lg-3 block__card d-flex flex-column align-items-center">
-			<img src="img/wrench.svg" class="block__img my-4" alt="FIX">
+		<article class="col-10 col-md-8 col-lg-3 block__card d-flex flex-column align-items-center border border-1">
+			<img src="img/block_3.png" class="block__img my-4" alt="FIX">
 			<h3 class="fw-bold mb-2 mb-sm-4 ms-2 fs-5 text-center text-sm-start">Сайт работает плохо и выглядит
 				непривлекательно?</h3>
 			<ul class="block__list mb-4 me-2">
@@ -26,8 +26,8 @@
 				<li class="my-2"><span class="fs-3 lh-1">&bull;</span> В процессе работы делаем только нужное и важное</li>
 			</ul>
 		</article>
-		<article class="col-10 col-md-8 col-lg-3 block__card d-flex flex-column align-items-center">
-			<img src="img/emoji-frown.svg" class="block__img my-4" alt="BAD EXECUTOR">
+		<article class="col-10 col-md-8 col-lg-3 block__card d-flex flex-column align-items-center border border-1">
+			<img src="img/block_2.png" class="block__img my-4" alt="BAD EXECUTOR">
 			<h3 class="fw-bold mb-2 mb-sm-4 ms-2 fs-5 text-center text-sm-start">Уже связывались с недобросовестными
 				"СЕОшниками"?</h3>
 			<ul class="block__list mb-4 me-2">
