--- a/src/components/letter.html
+++ b/src/components/letter.html
@@ -1,7 +1,8 @@
 <section class="letter container-fluid py-5 my-5">
-	<h2 class="letter__title w-100 mb-4 fs-2 fw-bold text-center">Заказать услугу</h2>
+	<div class="letter__container col-12 col-sm-8 col-md-6 mx-auto px-4">
+	<h2 class="letter__title w-100 mb-4 pt-4 fs-2 fw-bold text-center">Заказать услугу</h2>
 	<div class="row justify-content-center">
-		<form class="letter__form col-12 col-sm-6 g-3 needs-validation" id="formLetter" name="formLetter" method="POST" action="php/orderLetter.php" novalidate>
+		<form class="letter__form col-12 g-3 needs-validation" id="formLetter" name="formLetter" method="POST" action="php/orderLetter.php" novalidate>
 			<div class="row">
 			<div class="col-12 mb-3">
 				<label for="nameLetter" class="form-label">ФИО*:</label>
@@ -65,4 +66,5 @@
 		</div>
 		</form>
 	</div>
+</div>
 </section>
