--- a/src/components/team.html
+++ b/src/components/team.html
@@ -27,9 +27,9 @@
 				</article>
 			<article class="team__figure col-12 col-md-6">
 				<picture>
-					<source media="(max-width: 800px)" srcset="img/seo/seo-team-min.png">
-					<source media="(min-width: 801px)" srcset="img/seo/seo-team.png">
-					<img src="img/seo/seo-team.png" class="img img-fluid w-100 h-100" alt="SEO TEAM">
+					<source media="(max-width: 800px)" srcset="img/team_4.png">
+					<source media="(min-width: 801px)" srcset="img/team_2.png">
+					<img src="img/team_2.png" class="img img-fluid w-100 h-100" alt="SEO TEAM">
 				</picture>
 			</article>
 		</div>
