--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-	background-color: rgba(0, 20, 45, 0.55);
+	//background-color: rgba(0, 20, 45, 0.55);
 	&__logo-img {
 		max-width: 150px !important;
 		min-width: 100px !important;
