--- a/src/scss/_team.scss
+++ b/src/scss/_team.scss
@@ -7,3 +7,11 @@
 		object-position: center;
 	}
 }
+
+@media screen and (max-width: 1000px) {
+	.team {
+		&__figure img {
+			object-fit: contain;
+		}
+	}
+}
