--- a/src/scss/_approach.scss
+++ b/src/scss/_approach.scss
@@ -1,8 +1,13 @@
 .approach {
-
+	position: relative;
 	&__item {
-		background-color: rgb(0,20,45);
-		color: #fff;
+		//background-color: rgb(0,20,45);
+		//color: #fff;
+		color: rgb(0, 20, 45);
+		&:hover {
+			box-shadow: 0px 2.5px 10px 2.5px rgba(0,0,0,0.5);
+			z-index: 10;
+		}
 	}
 	&__item-title {
 		flex-basis: 1;
