--- a/src/scss/_block.scss
+++ b/src/scss/_block.scss
@@ -1,10 +1,14 @@
 .block {
+	position: relative;
 	&__card {
-		background-color: rgb(0, 20, 45);
-		color: #fff;
+		color: rgb(0, 20, 45);
+		&:hover {
+			box-shadow: 0px 2.5px 10px 2.5px rgba(0,0,0,0.5);
+			z-index: 10;
+		}
 	}
 	&__img {
-		width: 75px;
-		height: 75px;
+		width: 180px;
+		height: 180px;
 	}
 }
