--- a/src/scss/_order.scss
+++ b/src/scss/_order.scss
@@ -1,7 +1,16 @@
 .order {
-	background: url('../img/recourse.jpg') center / cover no-repeat;
+	background: url('../img/seo_img.png') center / cover no-repeat;
 	min-height: 200px;
+	&__container {
+		background-color: rgba(0, 0, 0, 0.65)
+	}
 	&__title, &__text {
 		color: #fff;
+	}
+}
+
+@media screen and (max-width: 576px) {
+	.order {
+		background: url('../img/seo_img-min.png') center / cover no-repeat;
 	}
 }
