--- a/src/scss/_procedure.scss
+++ b/src/scss/_procedure.scss
@@ -1,6 +1,9 @@
 .procedure {
-	background: linear-gradient(90deg, rgba(0, 20, 45, 0.75) 0%, rgba(0,20,45,0.75) 100%), url("../img/seo/marketing.png") center / cover no-repeat;
-	
+	//background: linear-gradient(90deg, rgba(0, 20, 45, 0.75) 0%, rgba(0,20,45,0.75) 100%), url("../img/seo/marketing.png") center / cover no-repeat;
+	background: url("../img/seo_img.png") center / cover no-repeat;
+	&__container {
+		background-color: rgba(0, 0, 0, 0.65);
+	}
 	&__info {
 		color: #fff;
 	}
@@ -34,6 +37,7 @@
 
 @media screen and (max-width: 576px) {
 	.procedure {
-		background: linear-gradient(90deg, rgba(0,20,45,0.75) 0%, rgba(0,20,45,0.75) 100%), url("../img/seo/marketing-min.png") center / cover no-repeat;
+		//background: linear-gradient(90deg, rgba(0,20,45,0.75) 0%, rgba(0,20,45,0.75) 100%), url("../img/seo/marketing-min.png") center / cover no-repeat;
+		background: url("../img/seo_img-min.png") center / cover no-repeat;
 	}
 }
