15/04/21_17:55_MSK_add new style & metrika

--- a/src/components/block.html
+++ b/src/components/block.html
@@ -7,7 +7,7 @@
 				нулям?</h3>
 			<ul class="block__list mb-5 me-2">
 				<li class="my-2"><span class="fs-3 lh-1">&bull;</span> Исправим это недоразумение, потому что мы опытная команда
-					— в этой теме с 2004 года</li>
+					— в этой теме с 2017 года</li>
 				<li class="my-2"><span class="fs-3 lh-1">&bull;</span> Ставим чёткие цели, применяем современные подходы к
 					продвижению сайтов</li>
 				<li class="my-2"><span class="fs-3 lh-1">&bull;</span> Используем гибкие методы к ведению проектов Agile и Scrum
@@ -32,7 +32,7 @@
 				"СЕОшниками"?</h3>
 			<ul class="block__list mb-4 me-2">
 				<li class="my-2"><span class="fs-3 lh-1">&bull;</span> Разговариваем на понятном языке без сложных терминов</li>
-				<li class="my-2"><span class="fs-3 lh-1">&bull;</span> Технический коллектив расположен в Белоруссии, что
+				<li class="my-2"><span class="fs-3 lh-1">&bull;</span> Технический коллектив расположен в России, Беларуси и Казахстане, что
 					позволяет предложить вам доступную цену наряду с высоким качеством выполняемых работ</li>
 				<li class="my-2"><span class="fs-3 lh-1">&bull;</span> В отчётах предоставляем исключительно факты, без воды
 				</li>
