--- a/src/components/faq.html
+++ b/src/components/faq.html
@@ -1,4 +1,4 @@
-<section class="faq container-fluid my-0 py-5">
+<section class="faq container-fluid mb-0 py-5">
 <!--FAQ TITLE-->
 <div class="review__head container my-5">
 	<div class="row flex-column justify-content-center align-items-center">
