--- a/src/components/team.html
+++ b/src/components/team.html
@@ -1,4 +1,4 @@
-<section id="team" class="team container-fluid my-5 py-5">
+<section id="team" class="team container-fluid mt-5 mb-0 pt-5 pb-0">
 	<!--TEAM TITLE-->
 	<div class="team__head container h-100 mb-4">
 		<div class="row flex-column justify-content-center align-items-center">
