--- a/src/components/top.html
+++ b/src/components/top.html
@@ -4,7 +4,7 @@
 		<div class="top__main row ">
 			<div class="top__item col-12 col-md-8 col-xl-6">
 				<h1 class="fs-1 fw-bold my-4">Продвижение сайта (SEO)</h1>
-				<h3 class="fs-3 fw-bold my-4">Поднимаем ваши сайты с самого дна поисковых систем от 9.900 руб/месяц</h3>
+				<h3 class="fs-3 fw-bold my-4">Поднимаем ваши сайты с самого дна поисковых систем от <span class="top__item_price">9.900 руб/месяц</span></h3>
 				<h4 class="fs-4 fw-bold my-4">Число запросов для SEO продвижения не ограничено</h4>
 				<h4 class="fs-4 fw-bold my-4">Гарантии результата — в договоре</h4>
 				<button type="button" class="btn btn-warning fs-6 fs-sm-4 fw-bold my-4 py-3" data-bs-toggle="modal"
