--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,6 +35,6 @@ body, .modal, .modal-open, .header {
 @import "_procedure.scss";
 @import "_team.scss";
 @import "_price.scss";
-@import "_review.scss";
+// @import "_review.scss";
 @import "_faq.scss";
 @import "_footer.scss";
