--- a/src/components/price.html
+++ b/src/components/price.html
@@ -1,4 +1,5 @@
-<section id="price" class="price container-fluid my-5 py-5">
+<section id="price" class="price container-fluid mb-0 mb-md-5 py-5">
+	<div class="price__container col-12 col-sm-10 mx-auto px-2 py-4">
 	<!--PRICE TITLE-->
 	<div class="price__head container h-100 mb-4">
 		<div class="row flex-column justify-content-center align-items-center">
@@ -81,4 +82,5 @@
 			</div>
 		</div>
 	</div>
+</div>
 </section>
