--- a/src/scss/_letter.scss
+++ b/src/scss/_letter.scss
@@ -4,7 +4,7 @@
 	background: url("../img/seo_img.png") center / cover no-repeat;
 	color: #fff;
 	&__container {
-		background-color: rgba(0, 0, 0, 0.65)
+		background-color: rgba(0, 0, 0, 0.65);
 	}
 }
 
