--- a/src/views/index.html
+++ b/src/views/index.html
@@ -10,6 +10,21 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;500;600;700;800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.min.css">
+	<!-- Yandex.Metrika counter -->
+	<script type="text/javascript" >
+		(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+		m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+		(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+		ym(75825307, "init", {
+				clickmap:true,
+				trackLinks:true,
+				accurateTrackBounce:true,
+				webvisor:true
+		});
+	</script>
+	<noscript><div><img src="https://mc.yandex.ru/watch/75825307" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	<!-- /Yandex.Metrika counter -->
 </head>
 <body>
 	@@include('../components/header.html')
@@ -24,9 +39,9 @@
 	@@include('../components/procedure.html')
 	@@include('../components/team.html')
 	@@include('../components/price.html')
-	@@include('../components/review.html')
-	@@include('../components/order.html')
+	<!-- @@include('../components/review.html') -->
 	@@include('../components/faq.html')
+	@@include('../components/order.html')
 	</main>
 	@@include('../components/footer.html')
 	<script src="js/vendors/vendors.min.js"></script>
